--- a/js/product-item/product-item.template.html
+++ b/js/product-item/product-item.template.html
@@ -1,4 +1,4 @@
-<div class="product-item" ng-class="{'product-item-list': list}">
+<div class="product-item" ng-class="{'product-item-list': list}" list="list">
     <div class="product-image" ng-class="{'product-image-list': list}">
         <img ng-src="{{x.image}}" width="400" height="300">
     </div>
@@ -8,7 +8,7 @@
         <div class="some-info"><p>{{x.description}}</p></div>
         <div class="buy clearfix">
             <div class="product-price">&#36;{{x.price}}</div>
-            <button class="btn btn-default" ng-disabled="checkBasket()" ng-click="buy()">{{value}}</button>
+            <button my-popover class="btn btn-default">Buy</button>
         </div>
 
         <div ng-controller="PanelController as panel">
